tests/e2e/unary_complex_3d.error
Error: syntax error in story at line 3, column 5

3|    a = [b==2, 2 < 3] <= (t == t) as int
          ^^^^^^^^^^^^^^^^^^^

E0123: `List[boolean]` can't be compared with `int`
