tests/e2e/unary_complex_3d.story
b = 42
t = 21
a = [b==2, 2 < 3] <= (t == t) as int
